--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start:dev": "concurrently \"npm run build:dev:server\" \"npm run build:dev:client\"",
     "build:dev": "npm run build:dev:client && npm run build:dev:server",
     "build:dev:client": "webpack-dev-server --mode development",
-    "build:dev:server": "nodemon server.js --exec babel-node",
+    "build:dev:server": "nodemon src/server/server.js --exec babel-node",
     "build:prod:client": "webpack --mode production",
-    "build:prod:server": "babel server.js -d dist/",
+    "build:prod:server": "babel src/server/server.js -d dist/",
     "build:prod": "npm run build:prod:client && npm run build:prod:server",
     "heroku-postbuild": "npm run build:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,13 +30,17 @@
     "@babel/cli": "^7.1.5",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "history": "^4.7.2",
     "jest": "^23.6.0",
+    "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
+    "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
