--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,17 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ],
     "@babel/preset-react"
   ],
-  "plugins": ["transform-class-properties", "@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "transform-class-properties",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
