--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build:prod:server": "babel src/server/ -d dist/",
     "build:prod": "npm run build:prod:client && npm run build:prod:server",
     "heroku-postbuild": "npm run build:prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html --reporter=text mocha --timeout 500000 --require @babel/register --require @babel/polyfill src/server/test/*test.js --watch --watch-extensions js",
+    "test:frontend": "jest --config jest.config.json -u",
+    "test:client": "npm run test:frontend -- --watch"
   },
   "repository": {
     "type": "git",
@@ -30,8 +32,11 @@
     "@babel/cli": "^7.1.5",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/register": "^7.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "compression": "^1.7.3",
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
@@ -40,9 +45,12 @@
     "jest": "^23.6.0",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
+    "moxios": "^0.4.0",
     "nodemon": "^1.18.6",
+    "nyc": "^13.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -54,6 +62,7 @@
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "supertest": "^3.3.0",
     "toastr": "^2.1.4",
     "validatorjs": "^3.15.1"
   },
@@ -70,9 +79,9 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
